--- a/people.html
+++ b/people.html
@@ -360,7 +360,6 @@
          <p style="text-align: justify;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
       </div>
    </div>
-<hr>
 
 	<script>
 	  // JavaScript动态调整样式
@@ -432,8 +431,8 @@
          <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="width: 100%; height: auto;"/>
       </div>   
       <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; ">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; "><b>MPhil Student</b></p>
+         <h4 style="text-align: left; margin-top: 0; ">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai; MPhil: UST)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Ph.D Student (HKPFS awardee)</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
 	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://kliubc23.github.io/">Personal Website</a></p>
 	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
