--- a/people.html
+++ b/people.html
@@ -436,7 +436,7 @@
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
 	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://kliubc23.github.io/">Personal Website</a></p>
 	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
-         <p style="text-align: justify;">Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+         <p style="text-align: justify;">Kangdi graduated from Nankai University with an MA in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Currently, her research examines how sleep, including both nocturnal sleep and daytime naps, facilitates non-native tone learning (i.e., Cantonese) through memory consolidation in older Mandarin-speaking adults. This work aims to understand the memory encoding, consolidation, and forgetting in aging brains to develop interventions against memory decline.</p>
       </div>
    </div>
 </section>
