--- a/people.html
+++ b/people.html
@@ -468,7 +468,7 @@
       </div>
    <div class="row-fluid alumni-entry" style="display: flex; align-items: flex-start; padding-top: 15px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;" />
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: 60%;" />
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; font-weight: normal; font-size: 18px;">· Susu LAI 賴素素 (Research Assistant, 2023-2024)</h4>
