--- a/people.html
+++ b/people.html
@@ -435,7 +435,7 @@
 	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Ph.D Student (HKPFS awardee)</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
 	 <p style="font-size: 18px; margin-bottom: 5px; "><a href="https://kliubc23.github.io/">Personal Website</a></p>
-	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040">https://orcid.org/0009-0008-1548-4040</a></p>
          <p style="text-align: justify;">Kangdi graduated from Nankai University with an MA in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Currently, her research examines how sleep, including both nocturnal sleep and daytime naps, facilitates non-native tone learning (i.e., Cantonese) through memory consolidation in older Mandarin-speaking adults. This work aims to understand the memory encoding, consolidation, and forgetting in aging brains to develop interventions against memory decline. Kangdi's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
       </div>
    </div>
