--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                            <h4>Contact us!</h4>
                            <br>
                               <p>
-                                 ​Email: <a href="mailto:qinlabhkust@gmail.com">qinlabhkust@gmail.com</a><br>
+                                 ​Email: <a href="mailto:slablab@ust.hk">slablab@ust.hk</a><br>
                                  Location: Room G005,</a><br>
                                  Cheng Yu Tung Building,</a><br>
                                  The Hong Kong University of Science and Technology,</a><br>
