--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                           </p>
                           <p>
                               English-speaking/South Asian Participants Wanted —> 
-                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
+                              <a href="files/Updated Nap Poster.jpg" target="_blank">Nap Project</a>
                           </p>
                       </div>
                       <!-- Image Content -->
@@ -425,6 +425,10 @@
                           <p>
                               Cantonese-speaking Older Adults Wanted —> 
                               <a href="files/CSWL_Old recruitment.pdf" target="_blank">CSWL Older Adult Project</a>   
+                          </p>
+                          <p>
+                              Cantonese-speaking Younger Adults Wanted —> 
+                              <a href="files/Context_poster_Yuqi.pdf" target="_blank">Bilingual Training Project</a>    
                           </p>
                    </div>
                    <!-- Image Content -->
