--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                           </p>
                           <p>
                               Mandarin-speaking Students Wanted —> 
-                              <a href="files/Eye-tracking_Poster_updated.pdf" target="_blank">Stress Project</a> & <a href="files/CSWL recruitment poster.pdf" target="_blank">CSWL Project</a>
+                              <a href="files/Stress_updated_poster_Eng.pdf" target="_blank">Stress Project</a> & <a href="files/CSWL_Young poster (English).pdf" target="_blank">CSWL Project</a>
                           </p>
                       </div>
                       <!-- Image Content -->
@@ -405,7 +405,7 @@
                           </p>
                           <p>
                               English-speaking/South Asian Participants Wanted —> 
-                              <a href="files/Updated Nap Poster.jpg" target="_blank">Nap Project</a>
+                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
                           </p>
                       </div>
                       <!-- Image Content -->
@@ -425,11 +425,11 @@
                           </p>
                           <p>
                               Cantonese-speaking Older Adults Wanted —> 
-                              <a href="files/CSWL_Old recruitment.pdf" target="_blank">CSWL Older Adult Project</a>   
+                              <a href="files/CSWL_Old poster (English).pdf" target="_blank">CSWL Older Adult Project</a>   
                           </p>
                           <p>
                               Cantonese-speaking Younger Adults Wanted —> 
-                              <a href="files/Context_poster_Yuqi.pdf" target="_blank">Bilingual Training Project</a>    
+                              <a href="files/English_Poster_compressed.pdf" target="_blank">Bilingual Training Project</a>    
                           </p>
                    </div>
                    <!-- Image Content -->
