--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                           </p>
                           <p>
                               English-speaking/South Asian Participants Wanted —> 
-                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
+                              <a href="files/Updated Nap Poster.jpg" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
                           </p>
                       </div>
                       <!-- Image Content -->
