--- a/media.html
+++ b/media.html
@@ -250,6 +250,17 @@
          	 </div>
 		<div class="row-fluid">
   	 	  <div class="span3">
+   		   <img src="files/Photo_KD.png" alt="media_nap.jpg" />
+  		  </div>
+   		 <div class="span9">
+   		   <p><a href="https://shss.hkust.edu.hk/news/huma-phd-student-wins-2025-lshk-outstanding-thesis-award" style="color: #515151;"><b>[Nov 2025] Kangdi Liu wins the 2025 LSHK Outstanding Thesis Award</a></b></p>
+    		  <i><a href="https://lshk.org/" style="color: #515151;">Linguistic Society of Hong Kong (LSHK)</a></i>
+    		 </div>
+ 		 </div>
+		 <hr>
+				   
+		<div class="row-fluid">
+  	 	  <div class="span3">
    		   <img src="files/IMES_brief.png" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
