--- a/media.html
+++ b/media.html
@@ -250,7 +250,7 @@
          	 </div>
 		<div class="row-fluid">
   	 	  <div class="span3">
-   		   <img src="files/Photo_KD.png" alt="media_nap.jpg" />
+   		   <img src="files/Photo_KD.jpg" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
    		   <p><a href="https://shss.hkust.edu.hk/news/huma-phd-student-wins-2025-lshk-outstanding-thesis-award" style="color: #515151;"><b>[Nov 2025] Kangdi Liu wins the 2025 LSHK Outstanding Thesis Award</a></b></p>
