--- a/people.html
+++ b/people.html
@@ -288,6 +288,18 @@
                         <p>ISB 2025 in Spain</p>
                     </div>
                 </div>    
+                <div class="item">
+                    <img src="files/ASA2025.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <p>ASA 2025 in Honolulu, Hawaii</p>
+                    </div>
+                </div>   
+                <div class="item">
+                    <img src="files/Kangdi_ARF.jpg" class="carousel-image" alt="">
+                    <div class="carousel-caption">
+                        <p>Kangdi Receives 2025 LSHK Outstanding MPhil Thesis Award</p>
+                    </div>
+                </div>   				
                <!-- 其他项目继续... -->
             </div>
             <a class="left carousel-control" href="#main-carousel" data-slide="prev">‹</a>
