--- a/media.html
+++ b/media.html
@@ -221,6 +221,7 @@
 			    <li class="publication">Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Andriy Myachykov, University of Macau [<a href="https://ccbs.ici.um.edu.mo/myachykov/" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html" target="_blank">Link</a>]</li>
+			    <li class="publication">Prof. Yu Chen, Southeastern University [<a href="https://sfl.seu.edu.cn/2024/0509/c9852a490026/page.htm" target="_blank">Link</a>]</li>				  
 			  </ol>
 		   <h3>Collaborative labs & centers</h3>
 		   <p><b>Internal</b></p>
