--- a/publications.html
+++ b/publications.html
@@ -238,6 +238,7 @@
 	    <h3>Conference Presentations</h3>
 	  </div>
 	  <ol>
+    <li class="publication">Chui, Y., &amp; Qin, Z. (2026). The role of L1 tonal experience in cross-situational learning of non-native tone contrasts. In <em><a href="https://www.speechprosody2026.org/" target="_blank">Proceedings of the 13rd International Conference on Speech Prosody (Speech Prosody 2026)</a></em>. Philadelphia, United States.</li> 	  
 	<li class="publication">Liu, K., Feng, Y., & Qin, Z. (2025). Tone learning in aging: an encoding-enhanced training paradigm to promote overnight consolidation. <em>The 6th joint meeting of the Acoustical Society of America and Acoustical Society of Japan</em>, Honolulu, HI. Poster Presentation. <a href="files/Kangdi_189ASA.pdf" target="_blank">Abstract</a></li>
 	<li class="publication">​Tremblay, A., Broersma, M., Cho, T., Kim, H., Qin, Z., Liang, J., Nuñez, A., &Terrazas, F. (2025). Cross-linguistic transfer in lexical stress perception: A cue-weighting typology. <em>The 6th joint meeting of the Acoustical Society of America and Acoustical Society of Japan</em>, Honolulu, HI. Poster Presentation. <a href="files/Jiayu_189ASA.pdf" target="_blank">Abstract</a></li>
 	<li class="publication">Wang, Y., Yang, X., & Qin, Z. (2025). How does attentional control modulate the younger and older adults’ dichotic listening of Cantonese tones? <em>The 6th joint meeting of the Acoustical Society of America and Acoustical Society of Japan</em>, Honolulu, HI. Poster Presentation. <a href="files/Yuqi_189ASA.pdf" target="_blank">Abstract</a></li>
